Funcionalidad de estado de juego y score

--- a/levels/easy.htm
+++ b/levels/easy.htm
@@ -17,8 +17,12 @@
         <script src="../js/listeners.js" type="application/javascript" defer></script>
         <script src="../js/easy.js" type="application/javascript" defer></script>
     </head>
-    <body>
-        <main class="flex-class flex-center flex-direction-column">
-        </main>
+    <body class="flex-class">
+        <article id="resultado" class="bgc-211 flex-class flex-center"></article>
+        <main class="bgc-211 flex-class flex-center flex-direction-column"></main>
+        <article id="score" class="bgc-211 flex-class">
+            <h2>Score:</h2>
+            <p id="score-value">0</p>
+        </article>
     </body>
 </html>
