--- a/levels/easy.htm
+++ b/levels/easy.htm
@@ -20,9 +20,15 @@
     <body class="flex-class">
         <article id="resultado" class="bgc-211 flex-class flex-center"></article>
         <main class="bgc-211 flex-class flex-center flex-direction-column"></main>
-        <article id="score" class="bgc-211 flex-class">
-            <h2>Score:</h2>
-            <p id="score-value">0</p>
+        <article id="score" class="bgc-211 flex-class flex-direction-column">
+            <article class="flex-class">
+                <h2>Score:</h2>
+                <p id="score-value" class="score-values">0</p>
+            </article>
+            <article class="flex-class">
+                <h2>Highscore:</h2>
+                <p id="hgscore-value" class="score-values"></p>
+            </article>
         </article>
     </body>
 </html>
