--- a/levels/medm.htm
+++ b/levels/medm.htm
@@ -18,8 +18,10 @@
         <script src="../js/easy.js" type="application/javascript" defer></script>
     </head>
     <body class="flex-class">
+        <header class="position-fixed font-dmbold"></header>
         <article id="resultado" class="bgc-211 flex-class flex-center"></article>
-        <main class="bgc-211 flex-class flex-center flex-direction-column"></main>
+        <main class="bgc-211 flex-class flex-center flex-direction-column">
+        </main>
         <article id="score" class="bgc-211 flex-class flex-direction-column">
             <article class="flex-class">
                 <h2>Score:</h2>
