--- a/levels/easy.htm
+++ b/levels/easy.htm
@@ -13,6 +13,7 @@
         <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" sizes="16x16">
         <link rel="stylesheet" href="../style/style.css" type="text/css">
         <link rel="stylesheet" href="../style/levels.css" type="text/css">
+        <link rel="stylesheet" href="../style/levels-responsive-easy.css" type="text/css">
         <script src="../js/main.js" type="application/javascript" defer></script>
         <script src="../js/listeners.js" type="application/javascript" defer></script>
         <script src="../js/easy.js" type="application/javascript" defer></script>
