Responsividad en nivel dificil

--- a/levels/easy.htm
+++ b/levels/easy.htm
@@ -8,6 +8,7 @@
         <meta name="keywords" content="memory game js">
         <meta name="author" content="El.Inquisidor">
         <meta name="description" content="Juego de memoria en paneles">
+        <meta name="theme-color" content="#D3D3D3">
         
         <title>Easy | Memory Game</title>
         <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" sizes="16x16">
