--- a/levels/medm.htm
+++ b/levels/medm.htm
@@ -8,7 +8,8 @@
         <meta name="keywords" content="memory game js">
         <meta name="author" content="El.Inquisidor">
         <meta name="description" content="Juego de memoria en paneles">
-        
+        <meta name="theme-color" content="#D3D3D3">
+
         <title>Medium | Memory Game</title>
         <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" sizes="16x16">
         <link rel="stylesheet" href="../style/style.css" type="text/css">
