--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#D3D3D3">
         
         <!-- Posicionamiento SEO -->
         <meta name="keywords" content="memory game js">
