--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
         
         <!-- Posicionamiento SEO -->
         <meta name="keywords" content="memory game js">
-        <meta name="author" content="El.Inquisidor">
+        <meta name="author" content="victor_merino">
         <meta name="description" content="Juego de memoria en paneles">
         
         <title>Memory Game</title>
