--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
         
         <!-- Posicionamiento SEO -->
         <meta name="keywords" content="memory game js">
-        <meta name="author" content="El.Inquisidor">
+        <meta name="author" content="victor_merino">
         <meta name="description" content="Juego de memoria en paneles">
         
         <title>Memory Game</title>
@@ -37,7 +37,7 @@
             </section>
         </main>
         <footer class="flex-class flex-center font-dmbold">
-            <h2 class="userselect-none">Created by El.Inquisidor</h2>
+            <h2 class="userselect-none">Created by victor_merino</h2>
         </footer>
     </body>
 </html>
